--- a/i18n/pt.xlf
+++ b/i18n/pt.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-<file target-language="es" source-language="en" original="lit-localize-inputs" datatype="plaintext">
+<file target-language="pt" source-language="en" original="lit-localize-inputs" datatype="plaintext">
 <body>
 <trans-unit id="s6196153c4b0c1ea0">
   <source>Install</source>
@@ -8,7 +8,7 @@
 </trans-unit>
 <trans-unit id="sdca23702207fba73">
   <source>This site has app functionality. Install it on your device for extensive experience and easy access.</source>
-  <target>Este sitio tiene una funcionalidad de aplicación. Es posible instalarla en este dispositivo para una amplia experiencia y acceso fácil.</target>
+  <target>Este site tem uma funcionalidade de aplicativo. É possível instalar neste dispositivo para uma experiência ampliada e acesso fácil.</target>
 </trans-unit>
 <trans-unit id="sa5ef80b4bb9b39f8">
   <source>Less</source>
@@ -16,31 +16,31 @@
 </trans-unit>
 <trans-unit id="s37a9e8aec5713460">
   <source>More</source>
-  <target>Más</target>
+  <target>Mais</target>
 </trans-unit>
 <trans-unit id="s8d0173763d91830c">
   <source>This site has app functionality. Add it to your Home Screen for extensive experience and easy access.</source>
-  <target>Este sitio tiene una funcionalidad de aplicación. Es posible agregarla a la pantalla de inicio para una amplia experiencia y acceso fácil.</target>
+  <target>Este site tem funcionalidade de aplicativo. Adicione-o à sua tela inicial para uma ampla experiência e fácil acesso.</target>
 </trans-unit>
 <trans-unit id="sdfe23506a3b0cdc8">
   <source>1) Open in Safari browser</source>
-  <target>1) Abrir en el navegador web Safari</target>
+  <target>1) Abrir no navegador Safari</target>
 </trans-unit>
 <trans-unit id="s1b9047d53d9f9d22">
   <source>2) Press Share in Navigation bar</source>
-  <target>2) Presionar Compartir en la barra de direcciones</target>
+  <target>2) Pressione Compartilhar na barra de navegação</target>
 </trans-unit>
 <trans-unit id="s5c6aad7a7e4a1437">
   <source>3) Press Add to Home Screen</source>
-  <target>3) Presionar Añadir a pantalla de inicio</target>
+  <target>3) Pressione Adicionar à tela inicial</target>
 </trans-unit>
 <trans-unit id="sc79fd7641eb9a975">
   <source>Hide Instruction</source>
-  <target>Esconder instrucciones</target>
+  <target>Ocultar instrução</target>
 </trans-unit>
 <trans-unit id="scdaf4bbff76674c8">
   <source>Add to Home Screen</source>
-  <target>Añadir a pantalla de inicio</target>
+  <target>Instalar</target>
 </trans-unit>
 <trans-unit id="se284453d6703f389">
   <source>Para uma melhor experiência, recomendamos que você ative as notificações no botão abaixo.</source>
